
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_dynamicGlobalProperties {
	
    int32                        id                            =      1;
	
    prototype.sha256             head_block_id                 =      2;
	
    uint32                       head_block_number             =      3;
	
    uint32                       maximum_block_size            =      4;
	
    prototype.coin               total_cos                     =      5;
	
    prototype.time_point_sec     time                          =      6;
	
    prototype.account_name       current_witness               =      7;
	
    uint32                       irreversible_block_num        =      8;
	
    uint32                       tps                           =      9;
	
    prototype.vest               total_vesting_shares          =      10;
	  
}
